More lit review, notes files added to folder structure

--- a/03_background/literature_review.tex
+++ b/03_background/literature_review.tex
@@ -40,11 +40,13 @@ Alternate realities have received substantial attention in recent decades, the t
 
 This chapter will investigate popular definitions, classifications \& comparisons of alternate realities, combining \& modifying these parameters to produce a canonical set of definitions for the remainder of this thesis, explaining `parallel reality' into these definitions \& models.
 
-\subsection{Milgram \& Kishino's \textit{Reality-Virtuality continuum}}
+\subsection{Milgram \& Kishino's Reality-Virtuality Continuum}
 
-Paul Milgram, Herman Colquhon and Fumio Kishino addressed this issue in detail and can in fact be accredited with introducing the terms \textit{augmented virtuality} and \textit{mixed reality} to the literature in the first instance, prompted by their identification of the need for more encompassing terms to supplement the existing definitions of \textit{augmented reality}~\cite{Milgram1994, Milgram1999}. Their discussion at times takes on a hint of the philosophical, as it rightly discusses what exactly it is that we mean by `real' and `virtual' and whether it is in fact reality or virtuality which is being augmented. However despite these thorough and well-reasoned definitions being published originally in 1994, much of the subsequent literature studied for this review has adopted conflicting, or at least confusing and misleading, definitions.
+Paul Milgram, Herman Colquhon and Fumio Kishino addressed the issue of alternate reality definitions in detail and can be accredited with introducing the terms \textit{augmented virtuality} and \textit{mixed reality} to the literature, prompted by their identification of the need for more encompassing terms to supplement the existing definitions of \textit{augmented reality}~\cite{Milgram1994, Milgram1999}.
 
-One of the overbearing concepts that Milgram et al. introduced is that whilst both purely real and purely virtual environments do exist they should not be considered discrete alternatives but rather poles lying at opposite ends of a linear scale called the \textit{Reality-Virtuality continuum}. The location of an environment along this continuum coincides with its location along a parallel \textit{Extent of World Knowledge continuum} where `world knowledge' refers to the amount of quantitative information that is associated with the content being presented, or in other words how much of the environment is being `modelled' by a computer. These continua are included as figure \ref{reality_virtuality_extent_of_world_knowledge_continuum}.
+%However despite these thorough and well-reasoned definitions being published originally in 1994, much of the subsequent literature studied for this review has adopted conflicting, or at least confusing and misleading, definitions.
+
+One of the overbearing concepts introduced by Milgram et al. is that whilst both purely real and purely virtual environments do exist they should not be considered discrete alternatives but rather poles lying at opposite ends of a linear scale $-$ the \textit{Reality-Virtuality continuum}. The location of an environment along this continuum coincides with its location along a parallel \textit{Extent of World Knowledge continuum} where `world knowledge' refers to the amount of quantitative information that is associated with the content being presented, or in other words how much of the environment is being `modelled' by a computer. These continua are included as figure \ref{reality_virtuality_extent_of_world_knowledge_continuum}.
 
 \begin{figure}[h]
 \centering
@@ -67,37 +69,9 @@ Thus, Milgram et al. conclude, it is not necessarily true that an environment is
 
 %=========================================================================================================
 
-\subsection{Steve Mann's Venn diagrams}
+\subsection{Roy Want's Virtuality Matrix}
 
-\begin{figure}[h]
-\centering
-\begin{minipage}{.5\textwidth}
-  \centering
-  \includegraphics[width=0.95\linewidth]{Mann_venn_original.png}
-  \caption{Original Mann venn diagram.}
-\end{minipage}%
-\begin{minipage}{.5\textwidth}
-  \centering
-  \includegraphics[width=0.95\linewidth]{Mann_venn_mod_1.png}
-    \caption{Modified Mann venn diagram.}
-\end{minipage}
-\end{figure}
-
-\begin{figure}[h]
-\centering
-  \includegraphics[width=0.5\linewidth]{Mann_venn_mod_3.png}
-  \caption{Further modified Mann venn diagram.}
-\end{figure}
-
-%=========================================================================================================
-
-\clearpage
-
-\subsection{Roy Want's \textit{virtuality matrix}}
-
-Another useful method of illustrating the relationships between the different categories of alternate realities was put forward by Roy Want in his introductory article for a 2009 issue of IEEE Pervasive Computing dedicated to the \textit{cross reality} paradigm~\cite{Want2009}. Here he presented a 2x2 matrix categorising the different terms according to whether the experience and overlay data are real or virtual (see figure \ref{original_virtuality_matrix.png}).
-
-Whilst this is a useful representation, some of the definitions and criteria depicted do not match with those of Milgram et al. or even with those of other authors in the same issue of IEEE Pervasive Computing, let alone other publications concerning alternate realities. Thus this review presents a modified version of Want's matrix, that is better in fitting with the consensual definitions built from reviewing the literature on alternate realities, as figure \ref{modified_virtuality_matrix.png}.
+Another method of illustrating the relationships between different categories of alternate realities was put forward by Roy Want in his introductory article for a 2009 issue of IEEE Pervasive Computing dedicated to the \textit{cross reality} paradigm~\cite{Want2009}. He presents a 2x2 matrix categorising the different terms according to whether the experience and overlay data are real or virtual (figure \ref{original_virtuality_matrix.png}). Whilst this is a useful representation, some of the definitions \& criteria depicted do not match with those of Milgram et al. or even with those of other authors in the same issue of Pervasive, let alone other publications concerning alternate realities. Figure \ref{modified_virtuality_matrix.png} presents a modified version of this matrix that is in keeping with the framework laid out by Milgram et al. \& the wider literature.
 
 \begin{figure}[h]
 \centering
@@ -115,15 +89,126 @@ Whilst this is a useful representation, some of the definitions and criteria dep
 \end{minipage}
 \end{figure}
 
-Where Want has \textit{cross reality} occupying the upper left quadrant at the congruence of `experience virtual' and `overlay data real' this review instead places \textit{augmented virtuality}. Referring to Milgram's continuum `experience virtual' relates to a position somewhere on the right half, while `overlay data real' relates to presentation over this virtual environment of sampled real world data resulting in a partially modelled environment, leaving us in the area of the continuum occupied by \textit{augmented virtuality}.
+Where the original matrix positions \textit{cross reality} in the upper left quadrant, at the congruence of `experience virtual' and `overlay data real', the modified matrix positions \textit{augmented virtuality}. Referencing Milgram's continuum, `experience virtual' relates to a position somewhere within the right half, while `overlay data real' relates to presentation over this necessarily virtual environment of sampled real world data, resulting in a partially modelled environment, leaving us in the area of the continuum occupied by \textit{augmented virtuality}.
 
-Want's matrix also features the term \textit{embodied virtuality} in the upper right quadrant, at the congruence of `experience real world' and `overlay data real'. Want explains that this is an alternative term for \textit{ubiquitous computing} which is \textit{``essentially the opposite of VR''}; this review instead reasons that the opposite of \textit{virtual reality} is simply \textit{reality} and that \textit{ubiquitous computing} does not constitute an alternate reality but simply a different model of human-computer interaction that can be implemented in either \textit{reality} or \textit{augmented reality}, depending upon how the computing infrastructure presents information to users.
+The original matrix also features the term \textit{embodied virtuality} in the upper right quadrant, at the congruence of `experience real world' and `overlay data real'. Want explains that this is an alternative term for \textit{ubiquitous computing} which is \textit{``essentially the opposite of VR''}. The modified matrix adopts the position that the opposite of \textit{virtual reality} is simply \textit{reality} and that \textit{ubiquitous computing} does not constitute an alternate reality but rather a different model of human-computer interaction (that can be implemented in either \textit{reality} or \textit{augmented reality}, depending upon how the computing infrastructure presents information to users). A \textit{ubiquitous computing} system is necessarily a real environment, as it is by definition the integration and dissemination of computational infrastructure into our real surrounds~\cite{York2004}. However whether this real environment is augmented by virtual objects is not restricted by the concept.
 
-A \textit{ubiquitous computing} system is necessarily a real environment, as it is by definition the integration and dissemination of computational infrastructure into our real surrounds~\cite{York2004}. However whether this real environment is augmented by virtual objects is not restricted by the concept. Thus \textit{ubiquitous computing} can exist in an environment that is either on the left extreme of the continuum, where no virtual objects are employed and the environment remains completely unmodelled, or somewhere to the right of the left extreme in the region of \textit{augmented reality}, where virtual objects are employed and the environment is partially modelled.
+Finally the modified matrix removes the central \textit{mixed reality} section from the original matrix, as its position is misleading. As the boundaries formed between the categories by the different colours could be construed as meaning that there are discrete boundaries between the different categories, the reader could be led to believe that a purely \textit{virtual reality} or a purely \textit{embodied virtuality} environment can be considered \textit{mixed reality}, which is incorrect. If one wished to picture the position of \textit{mixed reality} in relation to the modified matrix, it would cover the same area as enclosed by the union of \textit{augmented virtuality} and \textit{augmented reality}.
 
-This line of reasoning is supported by an almost complete lack of further mention of \textit{ubiquitous computing} elsewhere in the literature about alternate realities studied for this review. Furthermore the term \textit{embodied virtuality} is not used by any other author in the studied literature.
+%=========================================================================================================
 
-Finally this review has removed the central \textit{mixed reality} section from Want's original matrix, as its position could be misleading. As the boundaries formed between the categories by the different colours could be construed as meaning that there are discrete boundaries between the different categories, rather than a linear scale as depicted by Milgram's continuum, the reader could be led to believe that a purely \textit{virtual reality} or a purely \textit{embodied virtuality} environment can be considered \textit{mixed reality}, which is incorrect. If one wishes to picture the position of \textit{mixed reality} in relation to the modified matrix, it would cover the same area as enclosed by the union of \textit{augmented virtuality} and \textit{augmented reality}.
+\subsection{Steve Mann's Venn Diagrams}
+
+Steve Mann, a veteran of wearable computing \& one of the original MIT `gargoyles' etc. \textbf{***insert stuff here about him***}. used Venn diagrams to illustrate the relationships between the different categories of alternate realities (figure \ref{Mann_venn_original.png}).
+
+Mann introduces the terms \textit{modulated reality} \& \textit{mediated reality} \textbf{***need the paper to read***}.
+
+Mann's original diagram places augmented reality at a subset of mixed reality, but then further places virtual reality at a subset of augmented reality \& in turn mixed reality. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, introduces augmented virtuality \& positions both augmented reality \& augmented virtuality such that they overlap with modulated reality (as it is perfectly feasible for a modulated reality system to feature real or virtual augmentations).
+
+\begin{figure}[h]
+\centering
+\begin{minipage}{.5\textwidth}
+  \centering
+  \includegraphics[width=0.95\linewidth]{Mann_venn_original.png}
+  \caption{Original Mann venn diagram.}
+  \label{Mann_venn_original.png}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+  \centering
+  \includegraphics[width=0.95\linewidth]{Mann_venn_mod_1.png}
+    \caption{Modified Mann venn diagram.}
+    \label{Mann_venn_mod_1.png}
+\end{minipage}
+\end{figure}
+
+Visualising the position of reality \& virtual reality using this same method requires more drastic alteration to the Venn diagram, but is diagnostic in further revealing the relationships between the terms introduced within Want's literature. The further modified Venn diagram (figure \ref{Mann_venn_mod_3.png}) shows;
+\begin{itemize}
+	\item mixed reality as the intersection of reality \& virtual reality;
+	\item mediated reality can be comprised from purely real or purely virtual content;
+	\item all virtual reality is necessarily mediated reality;
+	\item modulated reality systems can comprise only mediated real, or of mixed reality;
+	\item augmented reality \& augmented virtuality, can feature in modulated reality systems.
+\end{itemize}
+
+\begin{figure}[h]
+\centering
+  \includegraphics[width=0.5\linewidth]{Mann_venn_mod_3.png}
+  \caption{Further modified Mann venn diagram.}
+  \label{Mann_venn_mod_3.png}
+\end{figure}
+
+\textbf{Does this final Venn diagram not show that Modulated Reality can exist as Mixed Reality but which *isn't* either Augmented Reality or Augmented Virtuality though?}
+
+%=========================================================================================================
+%=========================================================================================================
+
+\section{Adopted Definitions of Alternate Realities}
+
+Following are the definitions \& identifying/classifying criteria for the different categories of alternate realities identified thus far in this chapter.
+
+%This review has discovered differing (and in some cases conflicting) definitions for the different categories of alternate realities and for the criteria for differentiating between them. What follows in this section represents the definitions and differentiating criteria that this review has adopted after concluding them the most widely accepted and well reasoned.
+
+%=========================================================================================================
+
+\begin{center}
+\begin{longtable}{| l | p{12cm} |}
+
+\hline	
+	
+%=========================================================================================================
+		
+\textbf{Reality} & An environment that is entirely unmodelled, with the viewport containing no virtual objects and with no computer-based quantitative information associated with any of the (necessarily real) objects. \\
+		
+\hline
+		
+%=========================================================================================================
+		
+\textbf{Virtual Reality} & The polar opposite of \textit{reality}, an environment that consists solely of virtual objects, with computer-based quantitative information associated with all of them and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer. \textbf{***cite Milgram and Want***}
+
+While traditional definitions of \textit{virtual reality} require the environment to be completely immersive, such that when involved with the environment the user is completely unaware of the real environment that surrounds them (eg by using Head Mounted Displays \& body tracking techniques to remove logical anchors to the real world~\cite{Druck2006}) the criteria adopted herein are less drastic, classifying the virtual environments presented by video games viewed via 2D monitors as rudimentary implementations of virtual reality; they are completely modelled environments that exist entirely separate to the real world. \\
+		
+\hline
+		
+%=========================================================================================================
+
+\textbf{Mixed Reality} & The broad range of environments that arise from the merging of real and virtual environments to some extent such that the result is neither entirely real nor entirely virtual, where real and virtual objects co-exist. Both \textit{augmented reality} and \textit{augmented virtuality} are included under the broader classification of \textit{mixed reality}. \\
+
+\hline
+		
+%=========================================================================================================
+
+\textbf{Augmented Reality} & A mixed reality environment comprising a real environment has had virtual objects added to or overlain upon it. A common approach for achieving this addition/overlay is superimposing virtual objects over a direct or indirect view of the real environment using Head Mounted Displays \&/or cameras~\cite{Krevelen2010}. \textbf{***better citation here pls, there was that big AR survey paper***} \\
+
+	%A commercial example of \textit{augmented reality} is the Layar browser for mobile phones, which overlays various forms of data onto the view captured by a phone's camera after determining its location and orientation using GPS, accelerometer and magnetometer readings~\cite{eishita:layar}
+
+%~\cite{Milgram1999}
+
+\hline
+
+%=========================================================================================================
+
+\textbf{Augmented Virtuality} & A virtual environment upon which sampled real objects are overlain, perhaps through the use of cameras~\cite{caballero:behand}. \\
+
+%A simple commercial example of augmented virtuality is the EyeToy accessory and associated software for Sony's Playstation 2 games console (and later the Playstation Eye for the Playstation 3), a digital camera that captures images of players and their surroundings and integrates them into the gaming experience presented on the screen.
+
+\hline
+
+%=========================================================================================================
+
+\textbf{Mediated Reality} & Write after reading Mann document again. \\
+
+\hline
+
+%=========================================================================================================
+
+\textbf{Modulated Reality} & Write after reading Mann document again. \\
+
+%=========================================================================================================
+
+\hline
+
+\end{longtable}
+\end{center}
 
 %=========================================================================================================
 %=========================================================================================================
@@ -170,7 +255,7 @@ The Ubiquitous Sensor Portal project that followed the Dual Reality Lab partiall
 
 %=========================================================================================================
 
-\subsection{The \textit{Vacancy Problem}}
+\subsection{The Vacancy Problem}
 
 Lifton identifies the `vacancy problem';
 \begin{quote}
@@ -180,7 +265,7 @@ as a fundamental characteristic of the current generation of virtual worlds and 
 
 %=========================================================================================================
 
-\subsection{Lifton's virtual worlds taxonomy}
+\subsection{Lifton's Virtual Worlds Taxonomy}
 
 As the prominent figure in the development of the cross reality paradigm it is worth comparing Joshua Lifton's definitions for different categories of alternate realities and the relationships between them~\cite{Lifton2007a} in the current context.
 
@@ -206,7 +291,7 @@ Lifton does however explain that while such a taxonomy can be successfully appli
 
 \clearpage
 
-\subsection{Cross Reality \& the Milgram \& Kishino continuum}
+\subsection{Cross Reality \& Milgram \& Kishino's Reality-Virtuality Continuum}
 
 The position of XR in relation to other alternate realities studied by Computer Science can be visualised using Milgram \& Kishino's \textit{virtuality continuum} that stretches from an entirely real environment at one extreme to an ontologically parallel but entirely virtual environment~\cite{Qvortrup2002} at the other. The explanation herein distinguishes between environments themselves (depicted in figures \ref{virtuality-continuum-augmented-reality} to \ref{virtuality-continuum-cross-reality-3} by solid ellipses) \& where the stimuli that the user is perceiving originate from (depicted by dashed ellipses).
 
@@ -258,45 +343,8 @@ Whilst AR falls within the realms of Mixed Reality (MR), a XR system can be cons
 \end{figure}
 
 %=========================================================================================================
-%=========================================================================================================
 
-\section{Adopted Definitions of Alternate Realities}
-%This review has discovered differing (and in some cases conflicting) definitions for the different categories of alternate realities and for the criteria for differentiating between them. What follows in this section represents the definitions and differentiating criteria that this review has adopted after concluding them the most widely accepted and well reasoned.
-
-\subsection{Reality}
-%Occupying the left extreme of Milgram's continuum and the upper right quadrant of the modified Want matrix, \textit{reality} refers to an environment that is entirely unmodelled, with the viewport containing no virtual objects and no computer-based quantitative information is associated with any of the (necessarily real) objects. In fact, there may be no computer infrastructure involved in the situation whatsoever. This is the situation that we are most familiar with, as it is where the vast majority of us spend the vast majority of our time.
-
-\subsection{Virtual Reality}
-%The polar opposite to \textit{reality}, a \textit{virtual reality} environment occupies the right extreme of Milgram's continuum and the lower left quadrant of the modified Want matrix. A \textit{virtual reality} environment consists solely of virtual objects, with computer-based quantitative information associated with all of them and between all of them, creating a completely synthetic world entirely discrete and separate from the real world; a new world that exists solely within the data structures of a computer.%cite Milgram and Want
-
-%Traditional definitions of \textit{virtual reality} require the environment to be completely immersing; that is, when involved with such an environment the user is completely unaware of the real environment that surrounds their real bodies, often making use of Head Mounted Displays (HMD) and head \&/or body tracking techniques to improve the sense of immersion by removing the need to interact with interfaces logically anchored to the real world such as keyboards, mice and joysticks~\cite{Druck2006}.
-
-%However this review believes that taking the concept to a lesser extreme, the virtual environments presented by video games such as World of Warcraft can be construed as \textit{rudimentary} implementations of virtual reality; they are completely modelled environments that exist entirely separate to the real world, however interaction is not completely immersing due to the use of 2D monitors and traditional interface devices, largely due to the lack of common ownership of HMDs and advanced body tracking systems.
-
-\subsection{Mixed Reality}
-%Occupying any position between the extremes on Milgram's continuum, the term \textit{mixed reality} refers to a broad range of environments that arise from the merging of real and virtual environments to some extent such that the result is neither entirely real nor entirely synthetic, where real and virtual objects co-exist. As alluded to previously, under this definition both \textit{augmented reality} and \textit{augmented virtuality} are included under the broader classification of \textit{mixed reality}.
-
-%This is one definition where Want is lacking, claiming \textit{mixed reality} to be \textit{``some combination of the others''} where `others' refers to all of \textit{virtual reality}, \textit{augmented reality}, \textit{embodied virtuality} and \textit{cross reality}. This review disregards this definition as it relies upon Want's previously refuted definition of \textit{embodied virtuality} being the polar opposite of \textit{virtual reality} and because it also depends upon Want's definition of \textit{cross reality} which this review will also go on to refute.
-
-\subsection{Augmented Reality}
-%An \textit{augmented reality} environment occupies a position within the `left half' of Milgram's continuum, the lower right quadrant of the modified Want matrix and within the broader classification of \textit{mixed reality}. Thus an \textit{augmented reality} environment comprises a real environment that has had virtual objects added to or overlain upon it; a common approach for achieving this addition/overlay is superimposing virtual objects over a direct or indirect view of the real environment using Head Mounted Displays \&/or cameras~\cite{Krevelen2010}.
-
-%A commercial example of \textit{augmented reality} is the Layar browser for mobile phones, which overlays various forms of data onto the view captured by a phone's camera after determining its location and orientation using GPS, accelerometer and magnetometer readings~\cite{eishita:layar}
-
-%%~\cite{Milgram1999}
-
-\subsection{Augmented Virtuality}
-%Logically opposite to \textit{augmented reality}, an \textit{augmented virtuality} environment occupies a position within the `right half' of Milgram's continuum, the upper left quadrant of the modified Want matrix and again lies within the broader classification of \textit{mixed reality}. Thus an \textit{augmented virtuality} environment comprises a virtual environment, akin to \textit{virtual reality}, upon which sampled real objects are overlain, perhaps through the use of cameras~\cite{caballero:behand}.
-
-%A simple commercial example of augmented virtuality is the EyeToy accessory and associated software for Sony's Playstation 2 games console (and later the Playstation Eye for the Playstation 3), a digital camera that captures images of players and their surroundings and integrates them into the gaming experience presented on the screen.
-
-\subsection{Cross Reality}
-
-\subsection{Modulated Reality}
-
-\subsection{Mediated Reality}
-
-\subsection{Aside - PolySocial Reality}
+\subsection{PolySocial Reality in Cross Reality Systems}
 
 %=========================================================================================================
 %=========================================================================================================
