--- a/thesis.tex
+++ b/thesis.tex
@@ -3,6 +3,9 @@
 \usepackage{fullpage}
 \usepackage{graphicx}
 
+%tables that can span page breaks
+\usepackage{longtable}
+
 \usepackage{lipsum}
 
 %compresses ranges of citations eg [1, 2, 3, 4, 5] becomes [1-5]
