--- a/bib.bib
+++ b/bib.bib
@@ -48,7 +48,7 @@ year = {2012}
 }
 @article{Andersen,
 author = {Andersen, Peter B\o gh},
-file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Andersen - Unknown - Tangible Objects Connecting Informational and Physical space.pdf:pdf},
+file = {:array\_z/Downloads/TangObj.pdf:pdf},
 title = {{Tangible Objects : Connecting Informational and Physical space}}
 }
 @article{Appino1992,
@@ -773,6 +773,12 @@ url = {http://www.helsinki.fi/science/optek/1995/n2/cutler.txt},
 volume = {3},
 year = {1995}
 }
+@misc{Davies,
+author = {Davies, C J},
+title = {{Arduino sketch for Pangolin}},
+url = {https://bitbucket.org/cj\_davies/arduino\_hmc6434\_ublox\_max\_6\_tinygps},
+urldate = {01/04/2013}
+}
 @misc{Daviesc,
 author = {Davies, C J},
 title = {{Database as plain-text SQL script file}},
@@ -783,12 +789,6 @@ urldate = {01/04/2013}
 author = {Davies, C J},
 title = {{Pangolin source code}},
 url = {https://bitbucket.org/cj\_davies/viewer-release-serial-io},
-urldate = {01/04/2013}
-}
-@misc{Davies,
-author = {Davies, C J},
-title = {{Arduino sketch for Pangolin}},
-url = {https://bitbucket.org/cj\_davies/arduino\_hmc6434\_ublox\_max\_6\_tinygps},
 urldate = {01/04/2013}
 }
 @misc{Daviesb,
@@ -1259,16 +1259,16 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/17677199},
 volume = {75},
 year = {2007}
 }
-@misc{Google2012a,
-author = {Google},
-title = {{My Tracks - Android Apps on Google Play}},
-year = {2012}
-}
 @misc{Google2012,
 author = {Google},
 title = {{My Tracks - Android Apps on Google Play}},
 url = {https://play.google.com/store/apps/details?id=com.google.android.maps.mytracks\&hl=en},
 urldate = {28/03/2012},
+year = {2012}
+}
+@misc{Google2012a,
+author = {Google},
+title = {{My Tracks - Android Apps on Google Play}},
 year = {2012}
 }
 @misc{Greenhalgh,
@@ -1383,6 +1383,16 @@ url = {http://linkinghub.elsevier.com/retrieve/pii/S0921889009001092},
 volume = {57},
 year = {2009}
 }
+@misc{Heeter2003,
+abstract = {I have lived in San Francisco while working as a full-time virtual faculty member for Michigan State University for nearly six years. Unlike most humans, I spend a larger proportion of every day as a virtual person than as a physical person. This article is adapted from a keynote speech I delivered at the Fourth International Workshop on Presence in Philadelphia in May of 2001. I use a personal narrative style to explore issues and to question some of the research community's prevailing assumptions about presence. Lombard and Ditton's (1997) frequently cited conceptualization defines presence as a “perceptual illusion of nonmediation” that occurs “when a person fails to perceive or acknowledge the existence of a medium in his/her communication environment and responds as he/she would if the medium were not there.” The underlying assumption is that, in the absence of technology, everyone experiences continuous presence at a constant intensity throughout their lives. Instead, this article suggests that presence is not a constant of everyday nonmediated experience. Careful consideration of unmediated (real) presence might help the conceptualization and study of mediated presence.},
+author = {Heeter, Carrie},
+booktitle = {Presence: Teleoperators and Virtual Environments},
+number = {4},
+pages = {335--345},
+title = {{Reflections on Real Presence by a Virtual Person}},
+volume = {12},
+year = {2003}
+}
 @article{Heeter1992,
 abstract = {What do you feel when you enter a virtual world? What creates the experience of presence? What factors contribute to making you feel like you are there1 ?},
 author = {Heeter, Carrie},
@@ -1396,16 +1406,6 @@ title = {{Being there: The subjective experience of presence}},
 url = {http://dl.acm.org/citation.cfm?id=196589},
 volume = {1},
 year = {1992}
-}
-@misc{Heeter2003,
-abstract = {I have lived in San Francisco while working as a full-time virtual faculty member for Michigan State University for nearly six years. Unlike most humans, I spend a larger proportion of every day as a virtual person than as a physical person. This article is adapted from a keynote speech I delivered at the Fourth International Workshop on Presence in Philadelphia in May of 2001. I use a personal narrative style to explore issues and to question some of the research community's prevailing assumptions about presence. Lombard and Ditton's (1997) frequently cited conceptualization defines presence as a “perceptual illusion of nonmediation” that occurs “when a person fails to perceive or acknowledge the existence of a medium in his/her communication environment and responds as he/she would if the medium were not there.” The underlying assumption is that, in the absence of technology, everyone experiences continuous presence at a constant intensity throughout their lives. Instead, this article suggests that presence is not a constant of everyday nonmediated experience. Careful consideration of unmediated (real) presence might help the conceptualization and study of mediated presence.},
-author = {Heeter, Carrie},
-booktitle = {Presence: Teleoperators and Virtual Environments},
-number = {4},
-pages = {335--345},
-title = {{Reflections on Real Presence by a Virtual Person}},
-volume = {12},
-year = {2003}
 }
 @article{Held1992,
 author = {Held, Richard and Durlach, Nathaniel},
@@ -1476,20 +1476,6 @@ url = {http://www.htc.com/www/smartphones/htc-one-s/},
 urldate = {28/03/2013},
 year = {2013}
 }
-@misc{Hughes2006a,
-author = {Hughes, Ian},
-title = {{Second Life – Outside in}},
-url = {http://eightbar.co.uk/2006/04/09/second-life-outside-in/},
-urldate = {21/05/2012},
-year = {2006}
-}
-@misc{Hughes2006b,
-author = {Hughes, Ian},
-title = {{Well it got my attention – Second Life}},
-url = {http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/},
-urldate = {21/05/2012},
-year = {2006}
-}
 @misc{Hughes2009,
 author = {Hughes, Ian},
 title = {{Wimbledon – A fanployee perspective}},
@@ -1497,10 +1483,24 @@ url = {http://www.feedingedge.co.uk/blog/2009/06/15/wimbledon-a-fanployee-perspe
 urldate = {21/05/2012},
 year = {2009}
 }
+@misc{Hughes2006a,
+author = {Hughes, Ian},
+title = {{Second Life – Outside in}},
+url = {http://eightbar.co.uk/2006/04/09/second-life-outside-in/},
+urldate = {21/05/2012},
+year = {2006}
+}
 @misc{Hughes2006,
 author = {Hughes, Ian},
 title = {{Lessons from second life}},
 url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
+year = {2006}
+}
+@misc{Hughes2006b,
+author = {Hughes, Ian},
+title = {{Well it got my attention – Second Life}},
+url = {http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/},
+urldate = {21/05/2012},
 year = {2006}
 }
 @misc{Hughes2006c,
@@ -2124,6 +2124,13 @@ title = {{Dual Reality: An Emerging Medium}},
 type = {Ph.D. Dissertation},
 year = {2007}
 }
+@misc{Lifton2009a,
+author = {Lifton, Joshua},
+publisher = {Meta Institute for Computational Astrophysics (MICA)},
+title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
+url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
+year = {2009}
+}
 @inproceedings{lifton:adoption,
 annote = {        From Duplicate 1 (                           Consumer Adoption of Cross Reality Systems                         - Lifton, Joshua )
                 
@@ -2154,20 +2161,13 @@ title = {{Consumer Adoption of Cross Reality Systems}},
 url = {http://dl.acm.org/citation.cfm?id=1848072.1848338},
 year = {2010}
 }
-@misc{Lifton2009a,
-author = {Lifton, Joshua},
-publisher = {Meta Institute for Computational Astrophysics (MICA)},
-title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
-url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
-year = {2009}
-}
 @inproceedings{Lifton2007b,
 address = {New York, New York, USA},
 annote = {Paper about the Plug sensor/actuator platform developed by the Media Lab for Lifton's research. Published before Lifton's PhD so doesn't contain as much information as the PhD does about Plug \& its uses.},
 author = {Lifton, Joshua and Feldmeier, Mark and Ono, Yasuhiro and Lewis, Cameron and Paradiso, Joseph A.},
 booktitle = {Proceedings of the 6th international conference on Information processing in sensor networks - IPSN '07},
 doi = {10.1145/1236360.1236377},
-file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lifton et al. - 2007 - A platform for ubiquitous sensor deployment in occupational and domestic environments.pdf:pdf},
+file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lifton et al. - 2007 - A Platform for Ubiquitous Sensor Deployment in Occupational and Domestic Environments.pdf:pdf},
 isbn = {978159593638X},
 month = apr,
 pages = {119},
@@ -2399,6 +2399,11 @@ photojournalism and everyday use}},
 volume = {36},
 year = {1998}
 }
+@misc{Mann1994,
+author = {Mann, Steve},
+title = {{'Mediated Reality'}},
+year = {1994}
+}
 @misc{Mann2002a,
 abstract = {Mixed Reality exists in many forms along a continuum from Augmented Reality (reality enhanced by graphics, such as Sutherland's work from more than 30 years ago) to more recent efforts at Augmented Virtuality (graphics enhanced by reality, graphics enhanced by video, etc.). Mixed Reality provides numerous ways to add together (mix) various proportions of real and virtual worlds. However, Mediated Reality is an even older tradition, introduced by Stratton more than 100 years ago. Stratton presented two important ideas:  1. the idea of constructing special eyeglasses to modify how he saw the world; and  2. the ecologically motivated approach to conducting his experiments within the domain of his own everyday personal life.  Stratton's seminal work has inspired a wide variety of devices that can be used to augment, deliberately diminish, or otherwise alter human visual perception. The first half of this paper presents some of the problems with the existing taxonomies (e.g. mixed reality) and distinctions (e.g. optical versus video see-through), that arise when we consider reality-modifying devices. The second half of the paper presents various new designs for reality-modifying devices, especially those used to modify only a portion of the visual reality stream, suitable for use in everyday life. These devices have the appearance of ordinary bifocal eyeglasses and reading glasses. Finally, a new kind of reality mediator that uses the eyeglass frames themselves as the mediating element is presented. This design makes it impossible for those other than the wearer, even upon very close inspection, to determine whether or not the eyeglasses contain a reality mediator. Such designs make possible livelong experiments and mediated reality experiences in personal everyday life, without the social stigma associated with obvious reality--modifying devices.  },
 author = {Mann, Steve},
@@ -2407,11 +2412,6 @@ keywords = {HCI,Mediated Reality,UX},
 title = {{Mediated Reality with implementations for everyday life}},
 url = {http://www.mitpressjournals.org/toc/pres/11/4},
 year = {2002}
-}
-@misc{Mann1994,
-author = {Mann, Steve},
-title = {{'Mediated Reality'}},
-year = {1994}
 }
 @misc{Mann2002,
 abstract = {Diminished reality is as important as augmented reality, and both are possible with a device called the Reality Mediator . Over the past two decades, we have designed, built, worn, and tested many different embodiments of this device in the context of wearable computing, Incorporated into the Reality Mediator is an "EyeTap" system, which is a device that quantifies and resynthesizes light that would otherwise pass through one or both lenses of the eye(s) of a wearer. The functional principles of EyeTap devices are discussed, in detail. The EyeTap diverts into a spatial measurement system at least a portion of light that would otherwise pass through the center of projection of at least one lens of an eye of a wearer. The Reality Mediator has at least one mode of operation in which it reconstructs these rays of light, under the control of a wearable computer system. The computer system then uses new results in algebraic projective geometry and comparametric equations to perform head tracking, as well as to track motion of rigid planar patches present in the scene. We describe how our tracking algorithm allows an EyeTap to alter the light from a particular portion of the scene to give rise to a computer-controlled, selectively mediated reality. An important difference between mediated reality and augmented reality includes the ability to not just augment but also deliberately diminish or otherwise alter the visual perception of reality. For example, diminished reality allows additional information to be inserted without causing the user to experience information overload. Our tracking algorithm also takes into account the effects of automatic gain control, by performing motion estimation in both spatial as well as tonal motion coordinates.},
@@ -2636,6 +2636,11 @@ title = {{The Second Life of a Sensor: Integrating Real-world Experience in Virt
 url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.147.1457},
 year = {2008}
 }
+@misc{mit:doppel,
+author = {MIT},
+howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
+title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
+}
 @misc{MIT,
 annote = {        From Duplicate 1 (                           Responsive Environments Group                         - MIT )
                 
@@ -2652,11 +2657,6 @@ author = {MIT},
 howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/\}},
 title = {{Responsive Environments Group}},
 url = {http://www.media.mit.edu/resenv/}
-}
-@misc{mit:doppel,
-author = {MIT},
-howpublished = {$\backslash$url\{http://www.media.mit.edu/resenv/doppellab/\}},
-title = {{DoppelLab - Exploring Dense Sensor Network Data Through A Game Engine}}
 }
 @article{Mittal2011,
 author = {Mittal, Manas and Paradiso, Joseph A},
@@ -2693,6 +2693,12 @@ pages = {295--296},
 title = {{Localization System for Large Indoor Environments Using Invisible markers}},
 year = {2008}
 }
+@inproceedings{Okura2011,
+author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
+booktitle = {International Conference on Computer Graphics and Interactive Techniques, SIGGRAPH 2011, Vancouver, BC, Canada, August 7-11, 2011 , Poster Proceedings},
+title = {{Fly-through Heijo Palace Site: Historical Tourism System Using Augmented Telepresence}},
+year = {2011}
+}
 @article{Okura2006,
 abstract = {Augmented Telepresence is a technique for viewing a remote site using immersive displays.},
 author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
@@ -2702,12 +2708,6 @@ pages = {4503--4503},
 title = {{Fly-through Heijo Palace Site : Augmented Telepresence Using Aerial Omnidirectional Videos}},
 volume = {1},
 year = {2006}
-}
-@inproceedings{Okura2011,
-author = {Okura, Fumio and Kanbara, Masayuki and Yokoya, Naokazu},
-booktitle = {International Conference on Computer Graphics and Interactive Techniques, SIGGRAPH 2011, Vancouver, BC, Canada, August 7-11, 2011 , Poster Proceedings},
-title = {{Fly-through Heijo Palace Site: Historical Tourism System Using Augmented Telepresence}},
-year = {2011}
 }
 @misc{Oliver2010,
 author = {Oliver, Iain A and Miller, Alan H D and Allison, Colin},
@@ -2958,6 +2958,20 @@ author = {Pardue, Laurel and Dublon, Gershon and Jethwani, Anisha and Prouty, Je
 title = {{DoppelLab}},
 url = {http://www.media.mit.edu/resenv/doppellab/}
 }
+@inproceedings{park:xcream,
+address = {New York, NY, USA},
+author = {Park, Kyungeun and Yun, Jekuk and Byun, Changhyun and Kim, Yanggon and Chang, Juno},
+booktitle = {Proceedings of the 12th International Conference on Information Integration and Web-based Applications \&\#38; Services},
+doi = {http://doi.acm.org/10.1145/1967486.1967597},
+isbn = {978-1-4503-0421-4},
+keywords = {RFID (radio frequency identifcation),USN (universal sensor network),XCREAM (XLogic collaborative RFID/USN-Enabled ada,collaboration,middleware framework},
+pages = {692--695},
+publisher = {ACM},
+series = {iiWAS '10},
+title = {{XCREAM: collaborative middleware framework for RFID/USN-enabled applications}},
+url = {http://doi.acm.org/10.1145/1967486.1967597},
+year = {2010}
+}
 @inproceedings{Park2010,
 address = {New York, New York, USA},
 annote = {'XLogic Collaborative RFID/USN-Enabled Adaptive Middleware' aims to all-
@@ -2981,20 +2995,6 @@ pages = {692},
 publisher = {ACM Press},
 title = {{XCREAM}},
 url = {http://dl.acm.org/citation.cfm?id=1967486.1967597},
-year = {2010}
-}
-@inproceedings{park:xcream,
-address = {New York, NY, USA},
-author = {Park, Kyungeun and Yun, Jekuk and Byun, Changhyun and Kim, Yanggon and Chang, Juno},
-booktitle = {Proceedings of the 12th International Conference on Information Integration and Web-based Applications \&\#38; Services},
-doi = {http://doi.acm.org/10.1145/1967486.1967597},
-isbn = {978-1-4503-0421-4},
-keywords = {RFID (radio frequency identifcation),USN (universal sensor network),XCREAM (XLogic collaborative RFID/USN-Enabled ada,collaboration,middleware framework},
-pages = {692--695},
-publisher = {ACM},
-series = {iiWAS '10},
-title = {{XCREAM: collaborative middleware framework for RFID/USN-enabled applications}},
-url = {http://doi.acm.org/10.1145/1967486.1967597},
 year = {2010}
 }
 @misc{Parris2007,
@@ -3432,6 +3432,16 @@ title = {{Welcome to the New Journal}},
 volume = {1},
 year = {1992}
 }
+@article{Sivan2011,
+abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {3},
+title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
+url = {https://journals.tdl.org/jvwr/article/view/6140},
+volume = {4},
+year = {2011}
+}
 @article{Sevan2008,
 annote = {Very good \& thorough background/introduction to 'real virtual worlds', assuming no previous knowledge into the subject. Focuses strongly on Second Life.},
 author = {Sivan, Yesha},
@@ -3442,16 +3452,6 @@ number = {1},
 pages = {1--32},
 title = {{3D3C Real Virtual Worlds Defined : The Immense Potential of Merging 3D , Community , Creation , and Commerce 3D3C Real Virtual Worlds Defined : The Immense Potential of Merging 3D , Community , Creation , and Commerce}},
 url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:3D3C+Real+Virtual+Worlds+Defined\#0},
-volume = {1},
-year = {2008}
-}
-@article{Sivan2008,
-annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {2},
-title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
-url = {http://journals.tdl.org/jvwr/article/view/359},
 volume = {1},
 year = {2008}
 }
@@ -3470,15 +3470,15 @@ url = {http://journals.tdl.org/jvwr/article/view/671/539},
 volume = {2},
 year = {2009}
 }
-@article{Sivan2011,
-abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
+@article{Sivan2008,
+annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
 author = {Sivan, Yesha},
 journal = {Journal of Virtual Worlds Research},
-number = {3},
-title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
-url = {https://journals.tdl.org/jvwr/article/view/6140},
-volume = {4},
-year = {2011}
+number = {2},
+title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
+url = {http://journals.tdl.org/jvwr/article/view/359},
+volume = {1},
+year = {2008}
 }
 @article{Slater1999,
 abstract = {Explains why for not using the Witmer and Singer questionnaire for eliciting presence in virtual environments and a person's immersive tendencies. Differences in the definition of presence; Three aspects of presence; Factors that influence presence; Opinion on the questionnaire's design and methodology.},
@@ -3788,12 +3788,6 @@ publisher = {Springer-Verlag},
 title = {{Virtual Reality as Simulation: The CAVE as "Space of Illusion" in Museum Displays}},
 year = {2002}
 }
-@misc{U-bloxAGa,
-author = {u-blox AG},
-title = {{u-center GPS evaluation software}},
-url = {http://www.u-blox.com/en/evaluation-tools-a-software/u-center/u-center.html},
-urldate = {28/03/2012}
-}
 @misc{U-bloxAG,
 author = {u-blox AG},
 title = {{MAX-6 series}},
@@ -3805,6 +3799,12 @@ author = {u-blox AG},
 title = {{MAX-6 Product Summary}},
 url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
 year = {2012}
+}
+@misc{U-bloxAGa,
+author = {u-blox AG},
+title = {{u-center GPS evaluation software}},
+url = {http://www.u-blox.com/en/evaluation-tools-a-software/u-center/u-center.html},
+urldate = {28/03/2012}
 }
 @misc{UgoTrade2007,
 annote = {        From Duplicate 1 (                           EOLUS Makes Leap To 3D Internet On Second Life                         - UgoTrade )
@@ -3890,6 +3890,7 @@ year = {2011}
 }
 @misc{Venables2013,
 annote = {Quote from Palmer Luckey
+
         
 'Luckey always shared his plans online to the few stalwarts of the then-small, virtual reality scene "since it kind of crashed in the 90s" he qualifies.'},
 author = {Venables, Michael},
@@ -4102,7 +4103,7 @@ address = {New York, New York, USA},
 author = {Wojciechowski, Rafal and Walczak, Krzysztof and White, Martin and Cellary, Wojciech},
 booktitle = {Proceedings of the ninth international conference on 3D Web technology - Web3D '04},
 doi = {10.1145/985040.985060},
-file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wojciechowski et al. - 2004 - Building Virtual and Augmented Reality museum exhibitions(2).pdf:pdf},
+file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wojciechowski et al. - 2004 - Building Virtual and Augmented Reality museum exhibitions.pdf:pdf},
 isbn = {1581138458},
 keywords = {VRML,augmented reality,cultural heritage,virtual reality},
 month = apr,
@@ -4190,6 +4191,12 @@ title = {{Autonomy, Interaction, and Presence}},
 volume = {1},
 year = {1992}
 }
+@inproceedings{Zhao2002,
+author = {Zhao, Shanyang},
+booktitle = {Proceedings of the fifth annual international workshop on Presence},
+title = {{Reconceptualizing Presence: Differentiating Between Mode of Presence and Sense of Presence}},
+year = {2002}
+}
 @article{Zhao2003,
 abstract = {This paper contributes to the presence literature by explicating the meanings and subtypes of copresence. Copresence is defined here as consisting of two dimensions: copresence as mode of being with others, and copresence as sense of being with others. Mode of copresence refers to the physical conditions that structure human interaction. Six such conditions are delineated. Sense of copresence, on the other hand, refers to the subjective experience of being with others that an individual acquires in interaction. The main argument of this paper is that mode of copresence affects sense of copresence, and knowledge of how the former affects the latter will benefit copresence design. ABSTRACT FROM AUTHOR},
 author = {Zhao, Shanyang},
@@ -4204,9 +4211,36 @@ url = {http://www.mitpressjournals.org/doi/abs/10.1162/105474603322761261},
 volume = {12},
 year = {2003}
 }
-@inproceedings{Zhao2002,
-author = {Zhao, Shanyang},
-booktitle = {Proceedings of the fifth annual international workshop on Presence},
-title = {{Reconceptualizing Presence: Differentiating Between Mode of Presence and Sense of Presence}},
+@article{Hill2004,
+abstract = { Realtime image processing provides a general framework for robust mediated reality problems. This paper presents a realtime mediated reality system that is built upon realtime image processing algorithms. It has been shown that the graphics processing unit (GPU) is capable of efficiently performing image processing tasks. The system presented uses a parallel GPU architecture for image processing that enables realtime mediated reality. Our implementation has many benefits; the graphics hardware has high throughput and low latency; the GPU's are not prone to jitter. Additionally, the CPU is kept available for user applications. The system is easily constructed, consisting of readily available commodity hardware.},
+author = {Hill, R. and Fung, J. and Mann, S.},
+issn = {1522-4880},
+journal = {2004 International Conference on Image Processing, 2004. ICIP '04.},
+title = {{A parallel mediated reality platform}},
+volume = {5},
+year = {2004}
+}
+@misc{Regenbrecht2002a,
+abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
+author = {Regenbrecht, Holger and Schubert, Thomas},
+booktitle = {Presence: Teleoperators and Virtual Environments},
+issn = {1054-7460},
+number = {4},
+pages = {425--434},
+title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
+volume = {11},
 year = {2002}
+}
+@incollection{Schubert1999,
+abstract = {Schubert, T.W., Friedman, F., \& Regenbrecht, H.T. (1999). Embodied presence in virtual environments. In: Paton R, Neilson I (Eds.). Visual representations and interpretations. Springer-Verlag, London, pp. 268–278.},
+author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
+booktitle = {Visual representations and interpretations},
+doi = {10.1007/978-1-4471-0563-3\_30},
+editor = {{Paton R}, Neilson I},
+isbn = {9781441909183},
+pages = {268--278},
+publisher = {Springer-Verlag},
+title = {{Embodied presence in virtual environments}},
+url = {http://link.springer.com/chapter/10.1007/978-1-4471-0563-3\_30},
+year = {1999}
 }
