--- a/03_background/literature_review.tex
+++ b/03_background/literature_review.tex
@@ -99,11 +99,9 @@ Finally the modified matrix removes the central \textit{mixed reality} section f
 
 \subsection{Steve Mann's Venn Diagrams}
 
-Steve Mann, a veteran of wearable computing \& one of the original MIT `gargoyles' etc. \textbf{***insert stuff here about him***}. used Venn diagrams to illustrate the relationships between the different categories of alternate realities (figure \ref{Mann_venn_original.png}).
+Steve Mann, a veteran of wearable computing \& one of the original MIT `gargoyles' etc. \textbf{***Get reference about Steve Mann's history from Sherry Turkle***} presented a Venn diagram to illustrate the relationships between the different categories of alternate realities when discussing the problems that arise with existing taxonomies when discussing reality-modifying devices in general. Mann clarifies the use of `mediated reality' as \textit{``a general framework for artificial modification of human perception by way of devices for augmenting, deliberately diminishing, and more generally, for otherwise altering sensory input''}~\cite{Mann2002a}. Mediated reality thus encompasses all of mixed reality, but also the group of `modulated reality' which includes devices such as eyeglasses that use lenses/mirrors to invert the wearer's view.
 
-Mann introduces the terms \textit{modulated reality} \& \textit{mediated reality} \textbf{***need the paper to read***}.
-
-Mann's original diagram places augmented reality at a subset of mixed reality, but then further places virtual reality at a subset of augmented reality \& in turn mixed reality. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, introduces augmented virtuality \& positions both augmented reality \& augmented virtuality such that they overlap with modulated reality (as it is perfectly feasible for a modulated reality system to feature real or virtual augmentations).
+Mann's Venn diagram (figure \ref{Mann_venn_original.png}) places augmented reality at a subset of mixed reality, but then further places virtual reality at a subset of augmented reality \& in turn mixed reality. A modified version of this diagram (figure \ref{Mann_venn_mod_1.png}) removes virtual reality from this position, as although virtual reality is by definition mediated, it is not necessarily always presented as part of an augmented or mixed reality, as purely virtual environments can \& do exist $-$ Mann himself states that \textit{``mixed reality exists in many forms along a continuum from augmented reality \ldots\ to more recent efforts at augmented virtuality''}, which is contrary to the diagram's representation of virtual reality as necessarily a subset of augmented reality \& in turn mixed reality. Furthermore the modified diagram introduces augmented virtuality, mentioned by Mann in his prose but not included in the original diagram. An overlap is also introduced between those modulated reality environments that are also classified as mixed reality, as it is perplexing to think of a mixed reality environment that is neither augmented reality nor augmented virtuality.
 
 \begin{figure}[h]
 \centering
@@ -121,13 +119,13 @@ Mann's original diagram places augmented reality at a subset of mixed reality, b
 \end{minipage}
 \end{figure}
 
-Visualising the position of reality \& virtual reality using this same method requires more drastic alteration to the Venn diagram, but is diagnostic in further revealing the relationships between the terms introduced within Want's literature. The further modified Venn diagram (figure \ref{Mann_venn_mod_3.png}) shows;
+Visualising the position of the `basic' classes of reality \& virtual reality using this same method requires more drastic alteration to the Venn diagram, but is diagnostic in further revealing the relationships between the terms introduced within Want's literature. The further modified Venn diagram (figure \ref{Mann_venn_mod_3.png}) shows;
 \begin{itemize}
 	\item mixed reality as the intersection of reality \& virtual reality;
 	\item mediated reality can be comprised from purely real or purely virtual content;
-	\item all virtual reality is necessarily mediated reality;
-	\item modulated reality systems can comprise only mediated real, or of mixed reality;
-	\item augmented reality \& augmented virtuality, can feature in modulated reality systems.
+	\item that all virtual reality is necessarily mediated;
+	\item that modulated reality can comprise only mediated real, or both real \& virtual aspects in a mixed reality;
+	\item that augmented reality \& augmented virtuality can feature in modulated reality systems.
 \end{itemize}
 
 \begin{figure}[h]
@@ -138,6 +136,8 @@ Visualising the position of reality \& virtual reality using this same method re
 \end{figure}
 
 \textbf{Does this final Venn diagram not show that Modulated Reality can exist as Mixed Reality but which *isn't* either Augmented Reality or Augmented Virtuality though?}
+
+\textbf{Also, what about a device that modulates a purely virtual view? Does that mean there should be an intersection between modulated reality \& virtual reality that *isn't* within the realm of mixed reality? Or does modulation of a wholly virtual environment not really count, as the content is by its very definition `modulated' by the fact it is not real?}
 
 %=========================================================================================================
 %=========================================================================================================
@@ -195,13 +195,13 @@ While traditional definitions of \textit{virtual reality} require the environmen
 
 %=========================================================================================================
 
-\textbf{Mediated Reality} & Write after reading Mann document again. \\
+\textbf{Mediated Reality} & \textit{``A general framework for artificial modification of human perception by way of devices for augmenting, deliberately diminishing, and more generally, for otherwise altering sensory input''}~\cite{Mann2002a}. Encompasses all of mixed reality \& modulated reality. \\
 
 \hline
 
 %=========================================================================================================
 
-\textbf{Modulated Reality} & Write after reading Mann document again. \\
+\textbf{Modulated Reality} & Platforms that aim to modify the user's view, by multiplicative, diminishing, rotational, etc. techniques, where the user's view can be wholly real, or a mix of real \& virtual content. \\
 
 %=========================================================================================================
 
