--- a/03_background/literature_review.tex
+++ b/03_background/literature_review.tex
@@ -205,6 +205,10 @@ While traditional definitions of \textit{virtual reality} require the environmen
 
 %=========================================================================================================
 
+\textbf{HyperReality} &  \\
+
+%=========================================================================================================
+
 \hline
 
 \end{longtable}
@@ -212,6 +216,45 @@ While traditional definitions of \textit{virtual reality} require the environmen
 
 %=========================================================================================================
 %=========================================================================================================
+
+
+``HyperReality (HR) is a hypothetical communications infrastructure made possible by information technology. It allows the commingling of physical reality with virtual reality and human intelligence with artificial intelligence.''
+
+``HyperReality (HR) is a technological capability, like nanotechnology, human cloning and artificial intelligence. Like them, it does not as yet exist in the sense of being clearly demonstrable and publicly available. Like them, it is maturing in laboratories where the question `if?' has been replaced by `when?' And like them, the implications of its appearance as a basic infrastructure technology are profound and merit careful consideration.''
+
+``The concept of HyperReality (HR), like the concepts of nanotechnology, cloning and artificial intelligence, is in principle very simple. It is nothing more than the technological capability to intermix virtual reality (VR) with physical reality (PR) and artificial intelligence (AI) with human intelligence (HI) in a way that appears seamless and allows interaction.''
+
+``The project that led to the concept of HR began with the idea of teleconferencing in virtual reality.
+
+ATR (Advanced Telecommunications Research) in Kansai Science City
+
+``HyperReality is a technological capability that makes possible the seamless integration of physical reality and virtual reality, human intelligence and artificial intelligence.''
+
+Must be seamless, without a `bezel' (HyperReality p142)
+
+``HR makes ir possible for the physically real inhabitants of one place to purposively coact with the inhabitants of remote locations as welll as with computer-generated imaginary or artificial life forms in a HyperWorld.
+
+Distributed Virtual Reality - simply shared VR that is accessible by multiple simultaneous users via telecommunications infrastructure (HyperReality p13)
+
+HR is a single mixed reality environment (HyperReality p26)
+
+``It seeks to make virtual reality something that is experienced as part of physical reality, so that virtual and real phenomena appear to interact with each other: HR is VR \textit{as well as, not instead of,} PR.'' (HyperReality p31, emphasis original)
+
+HyperReality is a technological metaconcept (HyperReality p41)
+
+HyperReality is a technology that enables hyperreality (the postmodern term) (HyperReality p41)
+
+``HyperReality means a reality in which there is the extra dimension of virtual reality within normal physical reality'' (HyperReality p42)
+
+``The implication of HR is that, wherever you are, you could be somewhere else.'' (HyperReality p149) - not sure I agree with this as definition of HR though, as HR is about VR *as well as* rather than instead of PR - my mobile parallel reality is more like VR instead of PR, but with the ability of rapidly temporal change in which is being observed.
+
+
+
+
+From Simulacra and Simulation (Jean Baudrillard), Hyperreality is essentially an inability of consciousness to distinguish reality from a simulation of reality. Hyperreality is seen as a condition in which what is real and what is fiction are seamlessly blended together so that there is no clear distinction between where one ends and the other begins. It allows the commingling of physical reality with virtual reality (VR) and human intelligence with artificial intelligence (AI).
+
+
+
 
 \section{Cross Reality}
 
@@ -262,6 +305,8 @@ Lifton identifies the `vacancy problem';
 \textit{``the noticeable and profound absence of a person from one world, either real or virtual, while they are participating in the other. Simply put, the vacancy problem arises because people do not currently have the means to be in more than one place (reality) at a time.''}
 \end{quote}
 as a fundamental characteristic of the current generation of virtual worlds and proposes dual reality, more closely linking the real world with the virtual world, as an approach to mitigate the problem.
+
+\textbf{See HyperReality p35}
 
 %=========================================================================================================
 
@@ -345,6 +390,8 @@ Whilst AR falls within the realms of Mixed Reality (MR), a XR system can be cons
 %=========================================================================================================
 
 \subsection{PolySocial Reality in Cross Reality Systems}
+
+\textbf{Some references from HyperReality}
 
 %=========================================================================================================
 %=========================================================================================================
